--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+		
+
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -30,7 +34,7 @@
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
 								</div>
-								<div class="image filtered span-1-75" data-position="25% 25%">
+								<div class="image filtered span-1-75" data-position="50% 50%">
 									<img src="images/me1.jpg" alt="" />
 								</div>
 							</section>
