--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h2 class="major">Sed etiam aenean</h2>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+									<h2 class="major">Competencias tecnicas: </h2>
+									<p><strong>Desarrollo de software:</strong>, Capacidad para escribir código limpio y eficiente en varios lenguajes de programación como C#, Python, y HTML.</p>
+									<p><strong>Desarrollo web:</strong>Conocimiento y práctica en la creación y diseño de aplicaciones web, manejo de tecnologías como HTML, CSS, JavaScript y frameworks.
+									</p>
+									<p><strong>Diseño de interfaces de usuario:</strong>Capacidad para crear interfaces atractivas y funcionales, considerando la experiencia del usuario.</p>
+								    <p><strong>Manejo de herramientas de desarrollo</strong>Uso efectivo de entornos de desarrollo como Visual Studio, PyCharm, y otras plataformas de programación.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
